Added a few error pages

--- a/public/400.html
+++ b/public/400.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Line Of Thought Tour - 500 Error</title> 
+  <title>Line Of Thought Tour - 400 Error</title> 
   <meta content="Line Of Thought tracks what powers the web. Find out what tools power the sites you visit, or add your own site or tools." name="description" /> 
   <link rel="shortcut icon" href="/favicon.ico"/> 
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
@@ -41,8 +41,8 @@
   <div class="container group"> 
     <section id="content" class="main"> 
   <article> 
-    <h2>500 Error</h2> 
-    <p>Looks like something went wrong! We've been notified about it and will look into it shortly.</p> 
+    <h2>400 Error</h2> 
+    <p>There was an error processing the page you requested.</p> 
     
     <p>Here are a few places you can go...</p>
     <ul>
