--- a/public/404.html
+++ b/public/404.html
@@ -1,1 +1,91 @@
-404
+<!DOCTYPE html> 
+<html> 
+<head> 
+  <title>Line Of Thought Tour - 404 Error</title> 
+  <meta content="Line Of Thought tracks what powers the web. Find out what tools power the sites you visit, or add your own site or tools." name="description" /> 
+  <link rel="shortcut icon" href="/favicon.ico"/> 
+  <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
+  <meta content="en-us" http-equiv="Content-Language" /> 
+  <link href="/stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" /> 
+  <script type="text/javascript"> 
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-90326-14']);
+    _gaq.push(['_trackPageview']);
+ 
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script> 
+</head> 
+<body> 
+<header class="group"> 
+  <div class="container"> 
+    <hgroup id="title"> 
+      <p><a href="http://lineofthought.com/">Line Of <span>Thought</span></a></p> 
+      <span>Tracking what powers the web</span> 
+    </hgroup>
+    <nav> 
+      <ul> 
+        <li class="sites"><a href="http://lineofthought.com/sites">Sites</a></li> 
+        <li class="tools"><a href="http://lineofthought.com/tools">Tools</a></li> 
+        <li class="bookmarks"><a href="http://lineofthought.com/bookmarks">Bookmarks</a></li> 
+        <li class="blog"><a href="http://blog.lineofthought.com">Blog</a></li> 
+      </ul> 
+    </nav> 
+  </div> 
+</header> 
+  
+<div id="main"> 
+  <div class="container group"> 
+    <section id="content" class="main"> 
+  <article> 
+    <h2>404 Error</h2> 
+    <p>The page you were looking for does not exist.</p> 
+    
+    <p>Here are a few places you can go...</p>
+    <ul>
+      <li><a href="/">Go Home</a></li>
+      <li><a href="/sites">List of Sites</a></li>
+      <li><a href="/tools">List of Tools</a></li>
+    </ul>
+  </article> 
+</section> 
+ 
+<sidebar> 
+  <aside> 
+    <h3>Links</h3> 
+    <ul class="lst"> 
+      <li><a href="/tour">Line Of Thought Tour</a></li> 
+      <li><a href="http://blog.lineofthought.com">Line Of Thought Blog</a></li> 
+      <li><a href="/about">About Line Of Thought</a></li> 
+    </ul> 
+  </aside> 
+</sidebar> 
+  </div> 
+</div> 
+ 
+<footer> 
+  <div class="container"> 
+    <section class="main-footer"> 
+      <h3>Copyright &copy; 2011 Line Of Thought.</h3> 
+      <p>Run into an issue? Have a suggestion? <a href="https://getsatisfaction.com/lineofthought">Let us know!</a></p> 
+    </section> 
+    <section class="sidebar"> 
+      <h3>Quick Nav</h3> 
+      <ul> 
+        <li><a href="http://lineofthought.com/tour">Take A Tour</a></li> 
+        <li><a href="http://lineofthought.com/about">About Line Of Thought</a></li> 
+        <li><a href="http://lineofthought.com/sites/lineofthought">Tools We Use</a></li> 
+        <li><a href="http://blog.lineofthought.com">Blog</a></li> 
+      </ul> 
+    </section> 
+  </div> 
+</footer> 
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script> 
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script> 
+<script src="/javascripts/all.js?1302038085" type="text/javascript"></script> 
+ 
+</body> 
+</html>
