Added ability to send invites. Lowered case on o in line Of thought.

--- a/public/400.html
+++ b/public/400.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title>Line Of Thought Tour - 400 Error</title> 
-  <meta content="Line Of Thought tracks what powers the web. Find out what tools power the sites you visit, or add your own site or tools." name="description" /> 
+  <title>Line of Thought Tour - 400 Error</title> 
+  <meta content="Line of Thought tracks what powers the web. Find out what tools power the sites you visit, or add your own site or tools." name="description" /> 
   <link rel="shortcut icon" href="/favicon.ico"/> 
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type" /> 
   <meta content="en-us" http-equiv="Content-Language" /> 
@@ -57,9 +57,9 @@
   <aside> 
     <h3>Links</h3> 
     <ul class="lst"> 
-      <li><a href="/tour">Line Of Thought Tour</a></li> 
-      <li><a href="http://blog.lineofthought.com">Line Of Thought Blog</a></li> 
-      <li><a href="/about">About Line Of Thought</a></li> 
+      <li><a href="/tour">Line of Thought Tour</a></li> 
+      <li><a href="http://blog.lineofthought.com">Line of Thought Blog</a></li> 
+      <li><a href="/about">About Line of Thought</a></li> 
     </ul> 
   </aside> 
 </sidebar> 
@@ -69,14 +69,14 @@
 <footer> 
   <div class="container"> 
     <section class="main-footer"> 
-      <h3>Copyright &copy; 2011 Line Of Thought.</h3> 
+      <h3>Copyright &copy; 2011 Line of Thought.</h3> 
       <p>Run into an issue? Have a suggestion? <a href="https://getsatisfaction.com/lineofthought">Let us know!</a></p> 
     </section> 
     <section class="sidebar"> 
       <h3>Quick Nav</h3> 
       <ul> 
         <li><a href="http://lineofthought.com/tour">Take A Tour</a></li> 
-        <li><a href="http://lineofthought.com/about">About Line Of Thought</a></li> 
+        <li><a href="http://lineofthought.com/about">About Line of Thought</a></li> 
         <li><a href="http://lineofthought.com/sites/lineofthought">Tools We Use</a></li> 
         <li><a href="http://blog.lineofthought.com">Blog</a></li> 
       </ul> 
