Removed sidebar element, now using section.sidebar. Got site working in IE8

--- a/public/404.html
+++ b/public/404.html
@@ -53,7 +53,7 @@
   </article> 
 </section> 
  
-<sidebar> 
+<section class="sidebar">
   <aside> 
     <h3>Links</h3> 
     <ul class="lst"> 
@@ -62,7 +62,7 @@
       <li><a href="/about">About Line Of Thought</a></li> 
     </ul> 
   </aside> 
-</sidebar> 
+</section> 
   </div> 
 </div> 
  
