--- a/public/static/maintenance.html
+++ b/public/static/maintenance.html
@@ -42,7 +42,7 @@
   </article> 
 </section> 
  
-<sidebar> 
+<section class="sidebar">
   <aside> 
     <h3>Links</h3> 
     <ul class="lst"> 
@@ -50,7 +50,7 @@
       <li><a href="http://blog.lineofthought.com">Line Of Thought Blog</a></li> 
     </ul> 
   </aside> 
-</sidebar> 
+</section> 
   </div> 
 </div> 
  
